# socket-cpp-playground

./: README.md
linux-socket/client-server/: CMakeLists.txt  README.md  client.cpp  server.cpp
linux-socket/showip/: CMakeLists.txt  README.md  main.cpp
